--- a/index.html
+++ b/index.html
@@ -147,10 +147,11 @@
 <div id="root"></div>
 
 <script type="text/babel">
-    const { useState, useEffect, useMemo } = React;
+    const { useState, useEffect, useMemo, useRef } = React;
 
     const STARTING_SCORE = 301;
     const LEGS_TO_WIN = 3;
+    const VICTORY_MUSIC_SRC = 'assets/victory-music.mp3';
 
     const getStandings = (players, matches, groupPlayersIndices, groupLabel) => {
         const groupMatches = matches.filter((m) => m.group === groupLabel);
@@ -582,11 +583,13 @@
     }
 
     function DartsCalculator({ match, players, onClose, onSave }) {
+        const victoryAudioRef = useRef(null);
         const [p1Score, setP1Score] = useState(STARTING_SCORE);
         const [p2Score, setP2Score] = useState(STARTING_SCORE);
         const [legs, setLegs] = useState([match.s1, match.s2]);
         const [bust, setBust] = useState(false);
         const [winnerOfLeg, setWinnerOfLeg] = useState(null);
+        const [isFinishingMatch, setIsFinishingMatch] = useState(false);
 
         const [initialStarter] = useState(() => (Math.random() < 0.5 ? 0 : 1));
         const [coinFlipLabel] = useState(() => (initialStarter === 0 ? players[match.p1] : players[match.p2]));
@@ -614,6 +617,27 @@
 
         const currentPlayerIdx = turn === 0 ? match.p1 : match.p2;
         const currentScore = turn === 0 ? p1Score : p2Score;
+
+        useEffect(() => {
+            const audio = new Audio(VICTORY_MUSIC_SRC);
+            audio.preload = 'auto';
+            victoryAudioRef.current = audio;
+
+            return () => {
+                // Ei pysäytetä ääntä unmountissa, jotta voittomusiikki ehtii soida loppuun.
+                victoryAudioRef.current = null;
+            };
+        }, []);
+
+        const playVictoryMusic = () => {
+            const audio = victoryAudioRef.current;
+            if (!audio) return;
+
+            audio.currentTime = 0;
+            audio.play().catch(() => {
+                // Musiikkitiedosto saattaa puuttua tai selaimen autoplay-rajoitukset estävät toiston.
+            });
+        };
 
         const pushStep = (snapshot) => {
             setStepHistory((prev) => [...prev, snapshot]);
@@ -703,6 +727,7 @@
         };
 
         const confirmLeg = () => {
+            if (isFinishingMatch) return;
             const updatedHistory = [
                 ...history,
                 {
@@ -716,7 +741,11 @@
             newLegs[winnerOfLeg]++;
 
             if (newLegs[winnerOfLeg] >= LEGS_TO_WIN) {
-                onSave(match.id, newLegs[0], newLegs[1], updatedHistory);
+                playVictoryMusic();
+                setIsFinishingMatch(true);
+                setTimeout(() => {
+                    onSave(match.id, newLegs[0], newLegs[1], updatedHistory);
+                }, 1400);
             } else {
                 setLegs(newLegs);
                 setHistory(updatedHistory);
@@ -767,6 +796,14 @@
         return (
             <div className="fixed inset-0 z-50 bg-slate-950 flex flex-col font-sans">
                 {bust && <div className="absolute inset-0 z-[60] flex items-center justify-center bg-black/60"><div className="bust-overlay text-9xl font-black text-red-500 italic">BUST!</div></div>}
+                {isFinishingMatch && (
+                    <div className="absolute inset-0 z-[65] flex items-center justify-center bg-black/70">
+                        <div className="bust-overlay text-center">
+                            <div className="text-yellow-400 text-6xl font-black uppercase mb-3">OTTELU VOITETTU!</div>
+                            <div className="text-2xl font-bold uppercase">{players[currentPlayerIdx]}</div>
+                        </div>
+                    </div>
+                )}
                 <div className="p-4 border-b border-white/5 flex justify-between items-center bg-slate-900 shadow-xl">
                     <button onClick={onClose} className="text-slate-400 font-black uppercase text-[10px] hover:text-white transition-all">Lopeta</button>
                     <div className="text-center font-oswald uppercase font-black italic text-xl">
@@ -784,7 +821,9 @@
                         {winnerOfLeg !== null ? (
                             <div className="text-center animate-bounce">
                                 <div className="text-yellow-500 text-4xl font-black mb-4 uppercase">LEG VOITETTU!</div>
-                                <button onClick={confirmLeg} className="bg-green-600 px-8 py-4 rounded-2xl font-black uppercase text-xl">Jatka peliä</button>
+                                <button onClick={confirmLeg} disabled={isFinishingMatch} className={`bg-green-600 px-8 py-4 rounded-2xl font-black uppercase text-xl ${isFinishingMatch ? 'opacity-50 cursor-not-allowed' : ''}`}>
+                                    {isFinishingMatch ? 'Päätetään ottelua...' : 'Jatka peliä'}
+                                </button>
                             </div>
                         ) : (
                             <div className="flex gap-4">
