Rakenna checkout-vinkki kahteen tasoon: tiivis + avattava lisälaatikko (#8)

--- a/index.html
+++ b/index.html
@@ -754,6 +754,11 @@
 
         const dartsLeft = 3 - dartInTurn;
         const checkoutAdvice = useMemo(() => getCheckoutAdvice(currentScore, dartsLeft), [currentScore, dartsLeft]);
+        const [showCheckoutDetails, setShowCheckoutDetails] = useState(false);
+
+        useEffect(() => {
+            setShowCheckoutDetails(false);
+        }, [currentScore, turn, dartInTurn]);
 
         const handleDartInput = (rawVal) => {
             if (winnerOfLeg !== null) return;
@@ -945,25 +950,46 @@
                         <div className={`p-6 rounded-3xl border-4 ${turn === 0 ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-7xl font-mono font-black text-center">{p1Score}</div></div>
                         <div className={`p-6 rounded-3xl border-4 ${turn === 1 ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-7xl font-mono font-black text-center">{p2Score}</div></div>
                     </div>
-                    <div className="rounded-2xl border border-yellow-500/30 bg-yellow-500/5 p-4 text-xs uppercase tracking-wide space-y-2">
-                        <div className="font-black text-yellow-400">Checkout-ehdotus ({currentScore})</div>
-                        <div className="text-slate-200">{checkoutAdvice.message}</div>
-                        {checkoutAdvice.best && <div className="text-white font-bold">Paras: {checkoutAdvice.best}</div>}
-                        {checkoutAdvice.alternatives.length > 0 && (
-                            <div className="text-slate-300">Vaihtoehdot: {checkoutAdvice.alternatives.slice(0, 2).join(' | ')}</div>
-                        )}
-                        {checkoutAdvice.setup && <div className="text-slate-300">Setup: {checkoutAdvice.setup}</div>}
-                        {checkoutAdvice.missPlan.length > 0 && (
-                            <div className="text-slate-400">
-                                {checkoutAdvice.missPlan.map((plan, idx) => (
-                                    <div key={idx}>{plan.label}: {plan.route}</div>
-                                ))}
+                    <div className="rounded-2xl border border-yellow-500/35 bg-yellow-500/10 px-4 py-3 text-xs uppercase tracking-wide">
+                        <div className="flex items-center justify-between gap-3">
+                            <div>
+                                <div className="font-black text-yellow-400">Checkout-ehdotus ({currentScore})</div>
+                                {checkoutAdvice.best ? (
+                                    <div className="text-white font-black text-xl tracking-wide mt-1">{checkoutAdvice.best}</div>
+                                ) : (
+                                    <div className="text-slate-200 font-bold mt-1">{checkoutAdvice.message}</div>
+                                )}
                             </div>
-                        )}
-                        <div className="text-[10px] text-slate-400 normal-case">
-                            Double-out: lopetus vain tuplalla tai BULL 50:llä. 25 ei ole checkout.
+                            <button
+                                onClick={() => setShowCheckoutDetails((prev) => !prev)}
+                                className="h-9 w-9 shrink-0 rounded-full border border-yellow-500/50 bg-black/25 text-yellow-300 hover:bg-black/40 transition-all"
+                                aria-label={showCheckoutDetails ? 'Piilota checkout-vaihtoehdot' : 'Näytä lisää checkout-vaihtoehtoja'}
+                                title={showCheckoutDetails ? 'Piilota lisävaihtoehdot' : 'Näytä lisävaihtoehdot'}
+                            >
+                                <i className={`fas ${showCheckoutDetails ? 'fa-chevron-up' : 'fa-chevron-down'}`}></i>
+                            </button>
                         </div>
                     </div>
+
+                    {showCheckoutDetails && (
+                        <div className="rounded-2xl border border-yellow-500/30 bg-black/30 p-4 text-xs uppercase tracking-wide space-y-2">
+                            <div className="text-slate-200">{checkoutAdvice.message}</div>
+                            {checkoutAdvice.alternatives.length > 0 && (
+                                <div className="text-slate-300">Vaihtoehdot: {checkoutAdvice.alternatives.slice(0, 3).join(' | ')}</div>
+                            )}
+                            {checkoutAdvice.setup && <div className="text-slate-300">Setup: {checkoutAdvice.setup}</div>}
+                            {checkoutAdvice.missPlan.length > 0 && (
+                                <div className="text-slate-400">
+                                    {checkoutAdvice.missPlan.map((plan, idx) => (
+                                        <div key={idx}>{plan.label}: {plan.route}</div>
+                                    ))}
+                                </div>
+                            )}
+                            <div className="text-[10px] text-slate-400 normal-case">
+                                Double-out: lopetus vain tuplalla tai BULL 50:llä. 25 ei ole checkout.
+                            </div>
+                        </div>
+                    )}
                     <div className="flex-1 flex flex-col items-center justify-center gap-4 bg-white/5 rounded-3xl border border-white/10">
                         {winnerOfLeg !== null ? (
                             <div className="text-center animate-bounce">
