--- a/index.html
+++ b/index.html
@@ -179,22 +179,44 @@
         return String(value);
     };
 
+    const DOUBLE_FINISH_PRIORITY = [40, 32, 24, 16, 20, 36, 12, 8, 4, 2, 28, 26, 22, 18, 14, 10, 6, 30, 34, 38, 50];
+    const DOUBLE_PRIORITY_INDEX = new Map(DOUBLE_FINISH_PRIORITY.map((value, index) => [value, index]));
+
+    const TRIPLE_ORDER = [20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1];
+    const DOUBLE_ORDER = [20, 16, 12, 10, 18, 14, 8, 6, 4, 2, 1, 3, 5, 7, 9, 11, 13, 15, 17, 19];
+    const SINGLE_ORDER = [20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1];
+
     const FINISH_SEGMENTS = [
-        ...Array.from({ length: 20 }, (_, i) => ({ score: (i + 1) * 3, label: `T${i + 1}`, isDouble: false })),
-        ...Array.from({ length: 20 }, (_, i) => ({ score: (i + 1) * 2, label: `D${i + 1}`, isDouble: true })),
-        ...Array.from({ length: 20 }, (_, i) => ({ score: i + 1, label: `S${i + 1}`, isDouble: false })),
-        { score: 50, label: 'BULL', isDouble: true },
-        { score: 25, label: '25', isDouble: false },
-    ].sort((a, b) => b.score - a.score);
+        ...TRIPLE_ORDER.map((n) => ({ kind: 'T', number: n, score: n * 3, label: `T${n}`, isDouble: false })),
+        ...DOUBLE_ORDER.map((n) => ({ kind: 'D', number: n, score: n * 2, label: `D${n}`, isDouble: true })),
+        ...SINGLE_ORDER.map((n) => ({ kind: 'S', number: n, score: n, label: `S${n}`, isDouble: false })),
+        { kind: 'B', number: 50, score: 50, label: 'BULL', isDouble: true },
+        { kind: 'B', number: 25, score: 25, label: '25', isDouble: false },
+    ];
+
+    const routeRank = (route, startScore) => {
+        const last = route[route.length - 1];
+        const doubleRank = DOUBLE_PRIORITY_INDEX.has(last.score) ? DOUBLE_PRIORITY_INDEX.get(last.score) : 99;
+        const first = route[0];
+        const middleDoubles = route.slice(0, -1).filter((s) => s.kind === 'D').length;
+        const bullsBeforeFinish = route.slice(0, -1).filter((s) => s.kind === 'B').length;
+
+        let rank = route.length * 100 + doubleRank * 3 + middleDoubles * 2 + bullsBeforeFinish * 2;
+
+        if (startScore > 80 && route.length === 3 && first.kind !== 'T') rank += 18;
+        if (startScore > 60 && route.length === 2 && first.kind === 'D') rank += 10;
+        if (startScore <= 60 && route.length >= 2 && first.kind === 'T') rank += 12;
+
+        return rank;
+    };
 
     const getCheckoutRoutes = (score, dartsLeft, maxRoutes = 4) => {
-        const routes = [];
+        const rawRoutes = [];
 
         const walk = (remaining, darts, path) => {
-            if (routes.length >= maxRoutes) return;
             if (remaining === 0 && path.length > 0) {
                 const last = path[path.length - 1];
-                if (last.isDouble) routes.push(path);
+                if (last.isDouble) rawRoutes.push(path);
                 return;
             }
             if (remaining <= 1 || darts === 0) return;
@@ -202,12 +224,50 @@
             for (const segment of FINISH_SEGMENTS) {
                 if (segment.score > remaining) continue;
                 walk(remaining - segment.score, darts - 1, [...path, segment]);
-                if (routes.length >= maxRoutes) return;
             }
         };
 
         walk(score, dartsLeft, []);
-        return routes;
+
+        const deduped = [];
+        const seen = new Set();
+        rawRoutes
+            .sort((a, b) => routeRank(a, score) - routeRank(b, score))
+            .forEach((route) => {
+                const key = route.map((s) => s.label).join('-');
+                if (!seen.has(key)) {
+                    seen.add(key);
+                    deduped.push(route);
+                }
+            });
+
+        return deduped.slice(0, maxRoutes);
+    };
+
+    const getMissScenarios = (bestRoute, score) => {
+        if (!bestRoute || !bestRoute.length) return [];
+        const first = bestRoute[0];
+        const scenarios = [];
+
+        if (first.kind === 'T') {
+            scenarios.push({ label: `Jos osut ${`S${first.number}`} (tripla jäi sinkuksi)`, hit: first.number });
+        } else if (first.kind === 'D') {
+            scenarios.push({ label: `Jos osut ${`S${first.number}`} (tupla jäi sinkuksi)`, hit: first.number });
+        } else if (first.kind === 'B' && first.number === 50) {
+            scenarios.push({ label: 'Jos osut 25', hit: 25 });
+        }
+
+        scenarios.push({ label: 'Jos osut ohi', hit: 0 });
+
+        return scenarios.map((scenario) => {
+            const afterHit = score - scenario.hit;
+            const next = getCheckoutRoutes(afterHit, 2, 1)[0];
+
+            return {
+                label: scenario.label,
+                route: next ? next.map((s) => s.label).join(' → ') : getSetupSuggestion(afterHit),
+            };
+        });
     };
 
     const getSetupSuggestion = (score) => {
@@ -263,16 +323,7 @@
         }
 
         const [best, ...alternatives] = routes;
-        const missPlan = dartsLeft === 3 && best.length > 0
-            ? [1, 5].map((missBy) => {
-                const afterMiss = score - Math.max(best[0].score - missBy, 0);
-                const next = getCheckoutRoutes(afterMiss, 2, 1)[0];
-                return {
-                    label: `Jos eka tikka osuu ${Math.max(best[0].score - missBy, 0)} p`,
-                    route: next ? next.map((s) => s.label).join(' → ') : 'Pelaa setup turvalliseen tuplaan',
-                };
-            })
-            : [];
+        const missPlan = dartsLeft === 3 ? getMissScenarios(best, score) : [];
 
         return {
             message: 'Optimaalinen checkout ja vaihtoehdot alla.',
